Font size, links in footer

--- a/cart.html
+++ b/cart.html
@@ -24,16 +24,28 @@
 <body>
     <header>
         <nav class="nav__content">
+            <label for="menu-checkbox" id="menu-icon" class="hamburger-icon" aria-label="Like this item"><i class="fa-solid fa-bars"></i></label>
+            <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
+                <li><a href="mens-jackets.html">Men's</a></li>
+                <li><a href="coming-soon.html">Women's</a></li>
+                <li><a href="coming-soon.html">Sale</a></li>
+                <li><a href="coming-soon.html">About Us</a></li>
             </ul>
+            <section class="nav-icons">
+                <i class="fa-solid fa-magnifying-glass icon"></i>
+                <i class="fa-solid fa-user icon"></i>
+                <i class="fa-solid fa-heart icon"></i>
+                <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            </section>
         </nav>
     </header>
     <main class="main__content">
-        <nav class="nav-back">
+        <nav class="nav-back breadcrumbs__content">
              <a href="product.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
         </nav>
-        <h1>Cart</h1>
+        <h1 class="h1-headings">Cart</h1>
         <section class="cart__content">
             <div class="cart-items-summary">
                 <div class="items-in-cart">
@@ -41,9 +53,9 @@
                         <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="product-image-cart">
                     </div>
                     <div>
-                        <h2>Endurance Softshell Jacket</h2>
-                        <p>Color: Red</p>
-                        <p>Size: Large</p>
+                        <h2 class="h2-heading">Endurance Softshell Jacket</h2>
+                        <p class="color-heading">Color: Red</p>
+                        <p class="size-heading">Size: Large</p>
                         <div class="counter__content">
                             <label for="counter" class="counter-label">Quantity</label>
                             <input type="number" id="counter" class="counter-input" value="1" min="0" max="10">
@@ -55,7 +67,7 @@
                     </div>
                 </div>
                 <div class="order-summary">
-                    <h2>Order Summary</h2>
+                    <h2 class="h2-heading">Order Summary</h2>
                     <div class="subtotal__summary">
                         <p>Subtotal:</p>
                         <p class="price__summary">$79</p>
@@ -68,7 +80,7 @@
                         <p>Estimated tax:</p>
                         <p class="price__summary">$0</p>
                     </div>
-                    <div class="subtotal__summary">
+                    <div class="subtotal__summary total-summary">
                         <p>Total:</p>
                         <p class="price__summary">$79</p>
                     </div>
@@ -143,45 +155,45 @@
             </div>
             <div>
                 <h3 class="footer__headings">Shop</h3>
-                <ul>
-                    <li>Men</li>
-                    <li>Women</li>
-                    <li>Sale</li>
-                    <li>Gift Card</li>
-                </ul>
+                    <ul>
+                        <li><a href="mens-jackets.html" class="footer-links">Men</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Women</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Sale</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Gift Card</li></a>
+                    </ul>
             </div>
             <div>
                 <h3 class="footer__headings">My account</h3>
-                <ul>
-                    <li>Log in/Sign up</li>
-                    <li>Order Status</li>
-                </ul>
+                    <ul>
+                        <li><a href="coming-soon.html" class="footer-links">Log in/Sign up</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Order Status</li></a>
+                    </ul>
             </div>
             <div>
                 <h3 class="footer__headings">Help</h3>
                     <ul>
-                        <li>FAQ</li>
-                        <li>Shipping and Delivery</li>
-                        <li>Return Policies</li>
-                        <li>Terms and Conditions</li>
-                        <li>Contact Us</li>
+                        <li><a href="coming-soon.html" class="footer-links">FAQ</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Shipping and Delivery</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Return Policies</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Terms and Conditions</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Contact Us</li></a>
                     </ul>
             </div>
             <div>
                 <h3 class="footer__headings">About</h3>
                     <ul>
-                        <li>Rainydays</li>
-                        <li>Sustainability</li>
-                        <li>Our Stores</li>
-                        <li>Blog</li>
+                        <li><a href="coming-soon.html" class="footer-links">Rainydays</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Sustainability</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Our Stores</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Blog</li></a>
                     </ul>
             </div>
             <div>
                 <h3 class="follow-us__heading">Follow us</h3>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-instagram"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-youtube"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </section>
         <p>&copy; 2025 Rainydays</p>
