--- a/confirmation.html
+++ b/confirmation.html
@@ -24,18 +24,30 @@
 <body>
     <header>
         <nav class="nav__content">
+            <label for="menu-checkbox" id="menu-icon" class="hamburger-icon" aria-label="Like this item"><i class="fa-solid fa-bars"></i></label>
+            <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-            </ul>    
+                <li><a href="mens-jackets.html">Men's</a></li>
+                <li><a href="coming-soon.html">Women's</a></li>
+                <li><a href="coming-soon.html">Sale</a></li>
+                <li><a href="coming-soon.html">About Us</a></li>
+            </ul>
+            <section class="nav-icons">
+                <i class="fa-solid fa-magnifying-glass icon"></i>
+                <i class="fa-solid fa-user icon"></i>
+                <i class="fa-solid fa-heart icon"></i>
+                <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            </section>
         </nav>
     </header>
     <main class="main__content">
-        <nav class="nav-back">
+        <nav class="nav-back breadcrumbs__content">
             <a href="checkout.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
        </nav>
         <section class="confirmation">
             <i class="fa-solid fa-circle-check confirmation-icon"></i>
-            <h1>Thank You!</h1>
+            <h1 class="confirmation-heading">Thank You!</h1>
             <p>Your order WY6547 has been registered. You will receive a confirmation on your email shortly.</p>
         </section>
         <div class="confirmation__content">
@@ -65,22 +77,34 @@
             </section>
             <section class="order-details">
                 <div>
-                    <h2 class="order-heading">Order Details</h2>
+                    <h2 class="h2-heading">Order Details</h2>
                 </div>
                     <div class="order-details__content">
                         <div class="cart-items">
                         <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="checkout-image">
                         <div>
-                            <p>Endurance Softshell Jacket</p>
-                            <p>Color: Red</p>
-                            <p>Size: Large</p>
+                            <p class="confirmation-details">Endurance Softshell Jacket</p>
+                            <p class="confirmation-details">Color: Red</p>
+                            <p class="confirmation-details">Size: Large</p>
                         </div>
                     </div>
                     <div>
-                        <p>Subtotal: $79</p>
-                        <p>Shipping: $0</p>
-                        <p>Estimated taxes: $0</p>
-                        <p>Total: $79</p>
+                        <div class="confirmation-summary confirmation-details">
+                             <p>Subtotal:</p>
+                             <p>$79</p>
+                        </div>
+                        <div class="confirmation-summary confirmation-details">
+                            <p>Shipping:</p>
+                            <p>$0</p>
+                        </div>
+                        <div class="confirmation-summary confirmation-details">
+                            <p>Estimated taxes:</p>
+                            <p>$0</p>
+                        </div>
+                        <div class="confirmation-summary confirmation-details">
+                            <p>Total:</p>
+                            <p>$79</p>
+                       </div>
                     </div>
                 </div>
             </section>
@@ -99,45 +123,45 @@
             </div>
             <div>
                 <h3 class="footer__headings">Shop</h3>
-                <ul>
-                    <li>Men</li>
-                    <li>Women</li>
-                    <li>Sale</li>
-                    <li>Gift Card</li>
-                </ul>
+                    <ul>
+                        <li><a href="mens-jackets.html" class="footer-links">Men</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Women</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Sale</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Gift Card</li></a>
+                    </ul>
             </div>
             <div>
                 <h3 class="footer__headings">My account</h3>
-                <ul>
-                    <li>Log in/Sign up</li>
-                    <li>Order Status</li>
-                </ul>
+                    <ul>
+                        <li><a href="coming-soon.html" class="footer-links">Log in/Sign up</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Order Status</li></a>
+                    </ul>
             </div>
             <div>
                 <h3 class="footer__headings">Help</h3>
                     <ul>
-                        <li>FAQ</li>
-                        <li>Shipping and Delivery</li>
-                        <li>Return Policies</li>
-                        <li>Terms and Conditions</li>
-                        <li>Contact Us</li>
+                        <li><a href="coming-soon.html" class="footer-links">FAQ</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Shipping and Delivery</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Return Policies</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Terms and Conditions</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Contact Us</li></a>
                     </ul>
             </div>
             <div>
                 <h3 class="footer__headings">About</h3>
                     <ul>
-                        <li>Rainydays</li>
-                        <li>Sustainability</li>
-                        <li>Our Stores</li>
-                        <li>Blog</li>
+                        <li><a href="coming-soon.html" class="footer-links">Rainydays</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Sustainability</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Our Stores</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Blog</li></a>
                     </ul>
             </div>
             <div>
                 <h3 class="follow-us__heading">Follow us</h3>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-instagram"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-youtube"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </section>
         <p>&copy; 2025 Rainydays</p>
