--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
                 <label for="menu-checkbox" id="menu-icon" class="hamburger-icon" aria-label="Like this item"><i class="fa-solid fa-bars"></i></label>
                 <input type="checkbox" id="menu-checkbox">
                 <ul class="nav-links">
-                        <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                        <li><a href="mens-jackets.html">Men's</a></li>
-                        <li><a href="coming-soon.html">Women's</a></li>
-                        <li><a href="coming-soon.html">Sale</a></li>
-                        <li><a href="coming-soon.html">About Us</a></li>
+                    <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
+                    <li><a href="mens-jackets.html">Men's</a></li>
+                    <li><a href="coming-soon.html">Women's</a></li>
+                    <li><a href="coming-soon.html">Sale</a></li>
+                    <li><a href="coming-soon.html">About Us</a></li>
                 </ul>
                 <section class="nav-icons">
-                        <i class="fa-solid fa-magnifying-glass icon"></i>
-                        <i class="fa-solid fa-user icon"></i>
-                        <i class="fa-solid fa-heart icon"></i>
-                        <i class="fa-solid fa-cart-shopping"></i>
+                    <i class="fa-solid fa-magnifying-glass icon"></i>
+                    <i class="fa-solid fa-user icon"></i>
+                    <i class="fa-solid fa-heart icon"></i>
+                    <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 </section>
             </nav>
         </header>
@@ -45,19 +45,18 @@
                 <h1 class="slogan">Pushing the</h1>
                 <h1 class="slogan slogan-part-two">Comfort Zone</h1>
                 <a href="mens-jackets.html" class="button-homepage-big">Shop Men's</a>
-                <a href="womens.html" class="button-homepage-big">Shop Women's</a>
+                <a href="coming-soon.html" class="button-homepage-big">Shop Women's</a>
             </section>
             <section class="inspiration-content">
                 <div>
                     <h2 class="inspo-text image-2">Explore the outdoors with Rainydays</h2>
                     <a href="mens-jackets.html" class="button-homepage-small"> Shop Men's Jackets</a>
-                    <a href="womens.html" class="button-homepage-small"> Shop Women's Jackets</a>
+                    <a href="coming-soon.html" class="button-homepage-small"> Shop Women's Jackets</a>
                 </div>
                 <div>
                     <h2 class="inspo-text image-3">Quality products that will last for years</h2>
-                    <a href="mens.html" class="button-homepage-small"> Shop Top Sellers</a>
+                    <a href="coming-soon.html" class="button-homepage-small"> Shop Top Sellers</a>
                 </div>
-                
             </section>
         </main>
         <footer>
@@ -68,44 +67,44 @@
                 <div>
                     <h3 class="footer__headings">Shop</h3>
                         <ul>
-                            <li>Men</li>
-                            <li>Women</li>
-                            <li>Sale</li>
-                            <li>Gift Card</li>
+                            <li><a href="mens-jackets.html" class="footer-links">Men</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Women</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Sale</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Gift Card</li></a>
                         </ul>
                 </div>
                 <div>
                     <h3 class="footer__headings">My account</h3>
                         <ul>
-                            <li>Log in/Sign up</li>
-                            <li>Order Status</li>
+                            <li><a href="coming-soon.html" class="footer-links">Log in/Sign up</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Order Status</li></a>
                         </ul>
                 </div>
                 <div>
                     <h3 class="footer__headings">Help</h3>
                         <ul>
-                            <li>FAQ</li>
-                            <li>Shipping and Delivery</li>
-                            <li>Return Policies</li>
-                            <li>Terms and Conditions</li>
-                            <li>Contact Us</li>
+                            <li><a href="coming-soon.html" class="footer-links">FAQ</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Shipping and Delivery</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Return Policies</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Terms and Conditions</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Contact Us</li></a>
                         </ul>
                 </div>
                 <div>
                     <h3 class="footer__headings">About</h3>
                         <ul>
-                            <li>Rainydays</li>
-                            <li>Sustainability</li>
-                            <li>Our Stores</li>
-                            <li>Blog</li>
+                            <li><a href="coming-soon.html" class="footer-links">Rainydays</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Sustainability</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Our Stores</li></a>
+                            <li><a href="coming-soon.html" class="footer-links">Blog</li></a>
                         </ul>
                 </div>
                 <div>
                     <h3 class="follow-us__heading">Follow us</h3>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-linkedin-in"></i>
+                    <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </section>
             <p>&copy; 2025 Rainydays</p>
