--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -28,7 +28,7 @@
             <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                <li><a href="mens-jackets.html" class="mens-jackets-nav">Men's</a></li>
+                <li><a href="mens-jackets.html">Men's</a></li>
                 <li><a href="coming-soon.html">Women's</a></li>
                 <li><a href="coming-soon.html">Sale</a></li>
                 <li><a href="coming-soon.html">About Us</a></li>
@@ -37,19 +37,19 @@
                 <i class="fa-solid fa-magnifying-glass icon"></i>
                 <i class="fa-solid fa-user icon"></i>
                 <i class="fa-solid fa-heart icon"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
+                <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </section>
         </nav>
     </header>
     <main class="main__content">
-        <nav>
+        <nav class="breadcrumbs__content">
             <a href="index.html" class="nav-breadcrumbs">Home</a>
             <a href="mens-jackets.html" class="nav-breadcrumbs slash">Men's Jackets</a>
             <div class="nav-back">
                 <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
             </div>
         </nav>
-        <h1>Men's Jackets</h1>
+        <h1 class="h1-headings">Men's Jackets</h1>
         <section class="sort-and-relevance">
             <p class="sort">Brand</p>
             <p class="sort">Color</p>
@@ -167,7 +167,7 @@
             </div>
         </section>
         <div class="see-more__button">
-            <button class="see-more-button">See More</button>
+            <button class="see-more-button"><a href="coming-soon.html" class="see-more-link">See More</button></a>
         </div>
     </main>
     <footer>
@@ -177,45 +177,45 @@
             </div>
             <div>
                 <h3 class="footer__headings">Shop</h3>
-                <ul>
-                    <li>Men</li>
-                    <li>Women</li>
-                    <li>Sale</li>
-                    <li>Gift Card</li>
-                </ul>
+                    <ul>
+                        <li><a href="mens-jackets.html" class="footer-links">Men</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Women</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Sale</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Gift Card</li></a>
+                    </ul>
             </div>
             <div>
                 <h3 class="footer__headings">My account</h3>
-                <ul>
-                    <li>Log in/Sign up</li>
-                    <li>Order Status</li>
-                </ul>
+                    <ul>
+                        <li><a href="coming-soon.html" class="footer-links">Log in/Sign up</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Order Status</li></a>
+                    </ul>
             </div>
             <div>
                 <h3 class="footer__headings">Help</h3>
                     <ul>
-                        <li>FAQ</li>
-                        <li>Shipping and Delivery</li>
-                        <li>Return Policies</li>
-                        <li>Terms and Conditions</li>
-                        <li>Contact Us</li>
+                        <li><a href="coming-soon.html" class="footer-links">FAQ</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Shipping and Delivery</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Return Policies</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Terms and Conditions</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Contact Us</li></a>
                     </ul>
             </div>
             <div>
                 <h3 class="footer__headings">About</h3>
                     <ul>
-                        <li>Rainydays</li>
-                        <li>Sustainability</li>
-                        <li>Our Stores</li>
-                        <li>Blog</li>
+                        <li><a href="coming-soon.html" class="footer-links">Rainydays</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Sustainability</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Our Stores</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Blog</li></a>
                     </ul>
             </div>
             <div>
                 <h3 class="follow-us__heading">Follow us</h3>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-instagram"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-youtube"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </section>
         <p>&copy; 2025 Rainydays</p>
