--- a/product.html
+++ b/product.html
@@ -37,17 +37,17 @@
                 <i class="fa-solid fa-magnifying-glass icon"></i>
                 <i class="fa-solid fa-user icon"></i>
                 <i class="fa-solid fa-heart icon"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
+                <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </section>
         </nav>
     </header>
     <main class="main__content">
-        <nav>
+        <nav class="breadcrumbs__content">
             <a href="index.html" class="nav-breadcrumbs">Home</a>
             <a href="mens-jackets.html" class="nav-breadcrumbs slash">Men's Jackets</a>
             <a href="product.html" class="nav-breadcrumbs slash">Endurance Softshell Jacket</a>
             <div class="nav-back">
-                <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
+                <a href="mens-jackets.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
             </div>
         </nav>
         <section class="product-info">
@@ -55,8 +55,8 @@
                 <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="product-info-image">
             </div>
             <div class="product-info__content">
-                <h1>Endurance Softshell Jacket</h1>
-                <p class="color-choosen-red">Color: Red</p>
+                <h1 class="h1-headings">Endurance Softshell Jacket</h1>
+                <p class="color-choosen-red color-heading">Color: Red</p>
                 <div class="colorchoice-big">
                     <div class="circle-red-big"></div>
                     <div class="circle-blue-big"></div>
@@ -64,7 +64,7 @@
                     <div class="circle-black-big"></div>
                 </div>
                 <fieldset class="sizes">
-                    <legend>Size:</legend>
+                    <legend class="size-heading">Size:</legend>
                     <input type="radio" id="size-s" name="size" value="s" class="size-radio">
                     <label for="size-s" class="size-label circle-size">S</label>
                     <input type="radio" id="size-m" name="size" value="m" class="size-radio">
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div>
-                <h2>Description</h2>
+                <h2 class="h2-heading">Description</h2>
                 <p>This softshell jacket will take your adventures to the next level. It's lightweight, water resistant and wind resistant.</p>
                 <div class="features water-resistant">
                     <i class="fa-solid fa-umbrella"></i>
@@ -165,45 +165,45 @@
             </div>
             <div>
                 <h3 class="footer__headings">Shop</h3>
-                <ul>
-                    <li>Men</li>
-                    <li>Women</li>
-                    <li>Sale</li>
-                    <li>Gift Card</li>
-                </ul>
+                    <ul>
+                        <li><a href="mens-jackets.html" class="footer-links">Men</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Women</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Sale</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Gift Card</li></a>
+                    </ul>
             </div>
             <div>
                 <h3 class="footer__headings">My account</h3>
-                <ul>
-                    <li>Log in/Sign up</li>
-                    <li>Order Status</li>
-                </ul>
+                    <ul>
+                        <li><a href="coming-soon.html" class="footer-links">Log in/Sign up</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Order Status</li></a>
+                    </ul>
             </div>
             <div>
                 <h3 class="footer__headings">Help</h3>
                     <ul>
-                        <li>FAQ</li>
-                        <li>Shipping and Delivery</li>
-                        <li>Return Policies</li>
-                        <li>Terms and Conditions</li>
-                        <li>Contact Us</li>
+                        <li><a href="coming-soon.html" class="footer-links">FAQ</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Shipping and Delivery</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Return Policies</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Terms and Conditions</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Contact Us</li></a>
                     </ul>
             </div>
             <div>
                 <h3 class="footer__headings">About</h3>
                     <ul>
-                        <li>Rainydays</li>
-                        <li>Sustainability</li>
-                        <li>Our Stores</li>
-                        <li>Blog</li>
+                        <li><a href="coming-soon.html" class="footer-links">Rainydays</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Sustainability</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Our Stores</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Blog</li></a>
                     </ul>
             </div>
             <div>
                 <h3 class="follow-us__heading">Follow us</h3>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-instagram"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-youtube"></i></a>
+                <a href="coming-soon.html" class="footer-links"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </section>
         <p>&copy; 2025 Rainydays</p>
