--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 <div>
                     <h3 class="footer__headings">Shop</h3>
                         <ul>
-                            <li><a href="mens-jackets.html" class="footer-links">Men</li></a>
-                            <li><a href="coming-soon.html" class="footer-links">Women</li></a>
-                            <li><a href="coming-soon.html" class="footer-links">Sale</li></a>
-                            <li><a href="coming-soon.html" class="footer-links">Gift Card</li></a>
+                            <li><a href="mens-jackets.html" class="footer-links">Men</a></li>
+                            <li><a href="coming-soon.html" class="footer-links">Women</a></li>
+                            <li><a href="coming-soon.html" class="footer-links">Sale</a></li>
+                            <li><a href="coming-soon.html" class="footer-links">Gift Card</a></li>
                         </ul>
                 </div>
                 <div>
