--- a/cart.html
+++ b/cart.html
@@ -156,36 +156,36 @@
             <div>
                 <h3 class="footer__headings">Shop</h3>
                     <ul>
-                        <li><a href="mens-jackets.html" class="footer-links">Men</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Women</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Sale</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Gift Card</li></a>
+                        <li><a href="mens-jackets.html" class="footer-links">Men</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Women</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Sale</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Gift Card</a></li>
                     </ul>
             </div>
             <div>
                 <h3 class="footer__headings">My account</h3>
                     <ul>
-                        <li><a href="coming-soon.html" class="footer-links">Log in/Sign up</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Order Status</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Log in/Sign up</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Order Status</a></li>
                     </ul>
             </div>
             <div>
                 <h3 class="footer__headings">Help</h3>
                     <ul>
-                        <li><a href="coming-soon.html" class="footer-links">FAQ</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Shipping and Delivery</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Return Policies</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Terms and Conditions</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Contact Us</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">FAQ</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Shipping and Delivery</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Return Policies</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Terms and Conditions</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Contact Us</a></li>
                     </ul>
             </div>
             <div>
                 <h3 class="footer__headings">About</h3>
                     <ul>
-                        <li><a href="coming-soon.html" class="footer-links">Rainydays</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Sustainability</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Our Stores</li></a>
-                        <li><a href="coming-soon.html" class="footer-links">Blog</li></a>
+                        <li><a href="coming-soon.html" class="footer-links">Rainydays</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Sustainability</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Our Stores</a></li>
+                        <li><a href="coming-soon.html" class="footer-links">Blog</a></li>
                     </ul>
             </div>
             <div>
